--- a/style.css
+++ b/style.css
@@ -11,26 +11,16 @@ body{
 a {
   text-decoration: none;
 }
-li {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  padding: 0.2rem;
-  
-}
-label {
-  font-size: 1rem;
-  margin-left: 1rem;
-}
+
 #container {
-  background-color: aqua;
+  /* background-color: aqua; */
   flex-grow: 1;
   display: flex;
   flex-direction: row;
 }
 
 #todo-container{
-  background-color: blueviolet;
+  /* background-color: blueviolet; */
   /* max-width: 1280px; */
   width: 100%;
   margin: 0 auto;
@@ -48,25 +38,81 @@ form{
   justify-content: center;
   gap: 0.8rem;
   box-sizing: border-box;
+  padding: 0 0.6rem;
 }
 
 form > input{
   width: 60%;
   padding: 0.6rem;
   font-size: 1.2rem;
+  box-sizing: border-box;
+  border: 1px solid rgb(45, 173, 242);
+  border-radius: 4px;
 }
 
-form > button {
+#addBtn {
   width: 20%;
   padding: 0.6rem;
   font-size: 1.2rem;
   cursor: pointer;
+  background-color: rgb(45, 173, 242);
+  border: none;
+  border-radius: 8px;
+  /* color: #fff; */
 }
 
+
+#sortBtn{
+  background-color: transparent;
+  border: 1px solid rgb(45, 173, 242);
+  width: 40px;
+  border-radius: 8px;
+  display: none;
+  
+}
+
+#sort-img{
+  width: 20px;
+  height: 20px;
+
+}
+
+#warning {
+  margin: 0;
+  display: none;
+  color: red;
+  font-size: 0.8rem;
+  padding: 0.1rem 0 0 2.6rem;
+}
 #todo-list-container{
+  /* box-sizing: border-box; */
+  width: 100%;
   margin: 1rem 0 0;
-  padding: 0.4rem 2rem;
-  /* background-color: antiquewhite; */
+  padding: 0;
+  background-color: antiquewhite;
+}
+
+li {
+  width: 100%;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  padding: 0.4rem 0.8rem;
+  box-sizing: border-box;
+}
+.checkbox{
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+label {
+  font-size: 1rem;
+  margin-left: 1.2rem;
+  
+}
+.edit-input-field{
+  padding: 0.4rem;
+  font-size: 1.2rem;
 }
 .imgBtnContainer{
   margin-left: auto;
@@ -74,7 +120,13 @@ form > button {
 .edit-btn, .delete-btn{
   width: 20px;
   height: 20px;
-  margin-left: 0.6em;
+  margin-left: 1rem;
+  cursor: pointer;
+  transition: transform 0.3s;
+}
+.edit-btn:hover, .delete-btn:hover{
+  transform: scale(1.4)
+
 }
 
 footer{
