--- a/style.css
+++ b/style.css
@@ -6,27 +6,25 @@ body{
   font-size: 10px;
   display: flex;
   flex-direction: column;
-  /* background-color: pink; */
 }
+
 a {
   text-decoration: none;
 }
 
 #container {
-  /* background-color: aqua; */
   flex-grow: 1;
   display: flex;
   flex-direction: row;
 }
 
 #todo-container{
-  /* background-color: blueviolet; */
-  /* max-width: 1280px; */
   width: 100%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
+
 .title{
   margin: 0 auto;
   font-size: 2rem;
@@ -58,7 +56,6 @@ form > input{
   background-color: rgb(45, 173, 242);
   border: none;
   border-radius: 8px;
-  /* color: #fff; */
 }
 
 #addBtn:hover{
@@ -101,6 +98,34 @@ form > input{
   height: 20px;
 }
 
+button[data-tooltip]{
+  position: relative;
+  cursor: pointer;
+}
+
+button[data-tooltip]::after{
+  content: attr(data-tooltip);
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  transform: translate(-50%);
+  background-color: black;
+  color: #fff;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 12px;
+  white-space: nowrap;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.2s ease-in-out;
+  z-index: 1;
+}
+
+button[data-tooltip]:hover::after{
+  opacity: 1;
+  visibility: visible;
+}
+
 #warning {
   margin: 0;
   display: none;
@@ -108,12 +133,12 @@ form > input{
   font-size: 0.8rem;
   padding: 0.1rem 0 0 2.6rem;
 }
+
 #todo-list-container{
   /* box-sizing: border-box; */
   width: 100%;
   margin: 1rem 0 0;
   padding: 0;
-  /* background-color: antiquewhite; */
 }
 
 li {
@@ -131,21 +156,25 @@ li {
   display: inline-block;
   flex-shrink: 0;
 }
+
 label {
   font-size: 1.4rem;
   margin-left: 1.2rem;
   line-height: 1.4;
-
+  width: 100%;
+  cursor: pointer;
 }
 .edit-input-field{
   padding: 0.4rem;
   font-size: 1.2rem;
+  width: 100%;
 }
+
 .imgBtnContainer{
   margin-left: auto;
   display: flex;
-
 }
+
 .edit-btn, .delete-btn{
   width: 20px;
   height: 20px;
@@ -153,9 +182,9 @@ label {
   cursor: pointer;
   transition: transform 0.3s;
 }
+
 .edit-btn:hover, .delete-btn:hover{
   transform: scale(1.4)
-
 }
 
 footer{
@@ -169,6 +198,7 @@ footer{
 footer > small > a {
   color: #fff;
 }
+
 footer > small > a:hover {
   color: rgb(81, 213, 204);
 }
@@ -177,10 +207,12 @@ footer > small > a:hover {
   label{
     font-size: 1.6rem;
   }
+
   .edit-btn, .delete-btn{
     width: 30px;
     height: 30px;
   }
+
   #warning{
     padding: 0.1rem 0 0 4rem;
   }
@@ -194,6 +226,7 @@ footer > small > a:hover {
   #warning{
     padding: 0.1rem 0 0 5rem;
   }
+
   #todo-container{
     width: 90%;
   }
@@ -204,6 +237,7 @@ footer > small > a:hover {
   #todo-container{
     width: 70%;
   }
+
   #warning{
     padding: 0.1rem 0 0 4rem;
   }
@@ -213,14 +247,17 @@ footer > small > a:hover {
   #warning{
     padding: 0.1rem 0 0 5rem;
   }
+
   #todo-container{
     width: 60%;
   }
 }
+
 @media screen and (min-width: 1200px){
   #warning{
     padding: 0.1rem 0 0 5.6rem;
   }
+
   #todo-container{
     width: 50%;
   }
@@ -231,9 +268,11 @@ footer > small > a:hover {
   form > button{
     width: 10%;
   }
+
   #warning{
     padding: 0.1rem 0 0 7rem;
   }
+  
   #todo-container{
     width: 40%;
   }
